--- a/package.json
+++ b/package.json
@@ -1,1 +1,22 @@
 
+{
+  "name": "canvasv12level",
+  "version": "0.0.1",
+  "description": "Canvaslı hoş level sistemi.",
+  "main": "index.js",
+  "dependencies": {
+    "canvas": "^2.7.0",
+    "discord-logs": "^1.9.0",
+    "discord.js": "^12.5.3",
+    "better-sqlite3": "^7.4.4"
+  },
+  "engines": {
+    "node": "12.x"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "start": "node index.js"
+  },
+  "author": "Catcher",
+  "license": "ISC"
+}
